# px4_1.15_ros2_humble_ubuntu22.04

./: Dockerfile  Readme.md  Readme.txt  build.sh  entrypoint.sh  run.sh
launch_files/: camera_detection.sh
scripts/: single_drone_sitl.sh  sitl.sh
scripts/multi_drone/: CMakeLists.txt  package.xml
scripts/multi_drone/config/: test_params.yaml
scripts/multi_drone/controllers/: __init__.py
scripts/multi_drone/controllers/base/: base_controller.py  base_data.py  position_transformer.py
scripts/multi_drone/controllers/r1_rover/: r1_rover.py
scripts/multi_drone/controllers/x500/: states.py  x500.py  x500_base.py
scripts/multi_drone/launch/: test_gazebo.launch.py  test_multi_drone_run.launch.py  test_run.launch.py
scripts/multi_drone/move_commands/base/: base_commander.py  base_g_code.py
scripts/multi_drone/move_commands/r1_rover/: r1_rover.py
scripts/multi_drone/move_commands/x500/: commander.py
scripts/multi_drone/move_commands/x500/g_code/: __init__.py  base_move_command.py  g00.py  g01.py  g02.py  g03.py  g04.py  g05.py  g06.py  g20.py  g21.py  g22.py  g23.py  g24.py
scripts/multi_drone/scripts/: gazebo_server.py  runner.py
scripts/multi_drone/tests/: g21_move.py
scripts/multi_drone/utils/: geometry.py  methods.py
scripts/multi_drone_msg/: CMakeLists.txt  package.xml
scripts/multi_drone_msg/msg/: CoordinateDataMsg.msg  DroneInformMsg.msg  DroneParamsMsg.msg  LocalAndGlobalCoordinatesMsg.msg
