<?xml version="1.0"?>
<package format="3">
  <name>multi_drone</name>
  <version>0.1.0</version>
  <description>Package for multi-drone simulation with Gazebo Garden and PX4</description>
  <maintainer email="nidhirajr@gmail.com">Nidhi Raj</maintainer>
  <license>MIT</license>

  <!-- ROS 2 core dependencies -->
  <depend>rclpy</depend>
  <depend>ros_gz_sim</depend>
  <depend>launch_ros</depend>
  <depend>geometry_msgs</depend>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Additional runtime dependencies -->
  <depend>ament_index_python</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
