<?xml version="1.0"?>
<package format="3">
  <name>multi_drone_msg</name>
  <version>0.1.0</version>
  <description>Custom message definitions for multi-drone operations.</description>
  <maintainer email="nidhirajr@gmail.com">Nidhi Raj</maintainer>
  <license>MIT</license>

  <!-- Runtime dependency -->
  <depend>geometry_msgs</depend>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Execution/runtime dependency for generated interfaces -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Mark this package as containing ROS 2 interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
